<resources>
  <string name="app_name">Timer</string>
  
  <string name="preset_timer_ramen">🍜Ramen</string>
  <string name="preset_timer_soft_boiled_egg">🥚Soft Boiled Egg</string>
  <string name="preset_timer_hard_boiled_egg">🥚Hard Boiled Egg</string>
  <string name="preset_timer_plank">💪Plank</string>
  
  <string name="timer_start">start</string>
  <string name="timer_cancel">cancel</string>
  <string name="timer_dismiss">dismiss</string>
  <string name="timer_finish">timer finished</string>
  <string name="timer_add_1min">+ 1 min</string>
  <string name="timer_add_5min">+ 5 min</string>
  <string name="timer_add_10min">+ 10 min</string>
  <string name="timer_notification_text">timer is running.</string>
  
  <string name="timer_editor_title_hint">input title</string>
  <string name="timer_editor_save_title">save</string>
  <string name="timer_editor_count_indicator" translatable="false">%d/%d</string>
  
  <string name="timer_editor_hour_label">hour</string>
  <string name="timer_editor_minute_label">minute</string>
  <string name="timer_editor_seconds_label">seconds</string>
  <string name="timer_end_notification_text">The timer has ended. Turn off the alarm!</string>
</resources>